<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/itTrangChu"
        android:icon="@drawable/house"
        android:title="Trang Chủ"

        />
    <item
        android:id="@+id/itLichSu"
        android:icon="@drawable/history"
        android:title="@string/LichSu"

      />

    <item
        android:id="@+id/itNapTien"
        android:icon="@drawable/money"
        android:title="@string/NapTien"


        />

    <item
        android:id="@+id/itGoiCuoc"
        android:icon="@drawable/folder"
        android:title="@string/GoiCuoc"

        />

    <item
        android:id="@+id/itDVhot"
        android:icon="@drawable/server"
        android:title="@string/DVhot" />

</menu>