<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Xác nhận"
        android:textSize="24dp"
        android:layout_gravity="center"
        android:textColor="@color/colorText"
        android:layout_marginTop="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="8dp"



        >
        <TextView
            android:text="@string/dangkyhoachuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlue"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:text="Tên gói cước :"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"/>
            <TextView
                android:text="GR1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:text="Dịch vụ :"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"/>
            <TextView
                android:text=" Garena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:text="Nhà cung cấp :"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"/>
            <TextView
                android:text="VinaGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:text="Chu kỳ cước :"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"/>
            <TextView
                android:text="7 ngày"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:text="Số tiền: "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"/>
            <TextView
                android:text="5000 VNĐ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"/>


        </LinearLayout>
        <TextView
            android:text="@string/tieptuc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlue"/>
        <EditText
            android:layout_width="@dimen/size200dp"
            android:layout_height="30dp"
            android:hint="Account game"
            android:background="@drawable/custom_edt"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="10dp"
           android:layout_marginBottom="10dp"
           android:gravity="center">
           <Button
               android:id="@+id/btnHuyYeuCau"
               android:text="@string/huy"
               android:layout_width="125dp"
               android:layout_height="36dp"
               android:background="@drawable/custom_button"/>
           <Button
               android:id="@+id/btnDongYDKDVhot"
               android:text="@string/dongy"
               android:layout_width="125dp"
               android:layout_height="36dp"
               android:layout_marginLeft="15dp"
               android:background="@drawable/custom_button"/>

       </LinearLayout>

    </LinearLayout>




</LinearLayout>